blue_red/blue.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: blue-dmt
 namespace: color-dir
 labels:
   dp: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      color: blue
  template:
    metadata:
      labels:
        color: blue
    spec:
      containers:
      - name: blue
        image: nginx:blue
---
apiVersion: v1
kind: Service
metadata:
  name: blue-srv
  namespace: color-dir
spec:
  selector:
    color: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
