blue_red/red.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: red-dmt
 namespace: color
 labels:
   dp: red
spec:
  replicas: 2
  selector:
    matchLabels:
      color: red
  template:
    metadata:
      labels:
        color: red
    spec:
      containers:
      - name: red
        image: nginx:red
---
apiVersion: v1
kind: Service
metadata:
  name: red-srv
  namespace: color
spec:
  selector:
    color: red
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
